Fix team avatar white gap

--- a/public/css/index-new.css
+++ b/public/css/index-new.css
@@ -486,6 +486,8 @@ a.active {
 .avatar img {
 	width: 100%;
 	height: 100%;
+	display: block;
+	object-fit: cover;
 }
 
 .member-list li .name {
